# python-bootstrap-package

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_bootstrap_package/: version.py
tests/unit/: test_version.py
